[package]
name = "optmachine-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
base64 = "0.22.1"
bincode = {version = "2.0.1",features =["serde"]}
borsh = "1.5.7"
chrono = "0.4.42"
dotenvy = "0.15.7"
hyper = "1.7.0"
num-format = "0.4.4"
once_cell = "1.21.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
solana-client = "3.0.3"
solana-program = "3.0.0"
solana-pubkey = "2.4.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = {version ="0.6.6", features = ["cors"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
